--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "coloretto",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/~s308515/Game",
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
     "@reduxjs/toolkit": "^2.10.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
@@ -29,11 +31,12 @@
   "scripts": {
     "start": "concurrently \"npm run start:client\" \"npm run start:coloretto-web-server\"",
     "start:client": "react-scripts start",
-    "start:server": "npm --prefix server start",
+    "start:coloretto-web-server": "npm --prefix coloretto-web-server start",
+    "start:server": "npm --prefix coloretto-web-server start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "concurrently \"npm run start:client\" \"npm --prefix server run dev\"",
+    "dev": "concurrently \"npm run start:client\" \"npm --prefix coloretto-web-server run dev\"",
     "lint": "eslint --ext .js,.jsx,.ts,.tsx . --max-warnings=0",
     "lint:fix": "eslint --ext .js,.jsx,.ts,.tsx . --fix",
     "format": "prettier --write .",
